--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <section class="container-fluid">
         <div class="row align-items-center second-section">
-            <div class="col-md-6 d-flex flex-column justify-content-center align-items-center mx-auto text-column otro-color">
+            <div
+                class="col-md-6 d-flex flex-column justify-content-center align-items-center mx-auto text-column otro-color">
                 <h1 class="text-center">1 Kilo de Recetas</h1>
                 <p class="text-center">Descubre la obra maestra culinaria de la chef Camila Programa con "1 kilo de
                     recetas", un libro que presenta más de 500 recetas de pastelería y repostería en un formato
@@ -73,7 +74,9 @@
                     diseñadas que ilustran los resultados finales de cada receta. Este libro es una guía indispensable
                     para cualquier chef pastelero y una fuente de inspiración para los aspirantes a pasteleros</p>
                 <div class="d-flex justify-content-between">
-                    <button type="button" class="btn btn-secondary mx-4">Receta Gratis</button>
+                    <a href="receta2.html">
+                        <button type="button" class="btn btn-secondary mx-4">Receta Gratis</button>
+                    </a>
                     <a href="/compra.html?libro=1" class="btn btn-secondary mx-4">Comprar</a>
                 </div>
             </div>
@@ -97,33 +100,35 @@
                     cada creación. Un recurso esencial para cualquier persona que busque mejorar sus habilidades en la
                     panadería.</p>
                 <div class="d-flex justify-content-between">
-                    <button type="button" class="btn btn-secondary mx-4">Receta Gratis</button>
+                    <a href="receta.html">
+                        <button type="button" class="btn btn-secondary mx-4">Receta Gratis</button>
+                    </a>
                     <a href="/compra.html?libro=2" class="btn btn-secondary mx-4">Comprar</a>
                 </div>
             </div>
         </div>
     </section>
 
-<section>
-    <div class="container">
-        <h2 class="mb-4">Escríbenos</h2>
-        <form>
-          <div class="form-group">
-            <label for="name">Nombre:</label>
-            <input type="text" class="form-control" id="name" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" required>
-          </div>
-          <div class="form-group">
-            <label for="message">Mensaje:</label>
-            <textarea class="form-control" id="message" rows="5" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Hablemos</button>
-        </form>
-      </div>      
-</section>
+    <section>
+        <div class="container">
+            <h2 class="mb-4">Escríbenos</h2>
+            <form>
+                <div class="form-group">
+                    <label for="name">Nombre:</label>
+                    <input type="text" class="form-control" id="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Mensaje:</label>
+                    <textarea class="form-control" id="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Hablemos</button>
+            </form>
+        </div>
+    </section>
 
     <footer>
         <p>Camila Dupuy 2023</p>
