--- a/compra.html
+++ b/compra.html
@@ -140,7 +140,9 @@
                         </tr>
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-secondary">Comprar</button>
+                <!--boton comprar-->
+                <button type="button" class="btn btn-secondary" onclick="alert('Su compra se realizó satisfactoriamente')">Comprar</button>
+                
             </div>
         </div>
     </div>
