--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <label for="message">Mensaje:</label>
                     <textarea class="form-control" id="message" rows="5" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Hablemos</button>
+                <button type="submit" class="btn btn-secondary" onclick="alert('Mensaje Enviado con Éxito')">Hablemos</button>
             </form>
         </div>
     </section>
