--- a/compra.html
+++ b/compra.html
@@ -44,7 +44,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <!-- Aquí irían los formularios -->
+                <!-- formularios-->
                 <h2>Datos Personales</h2>
                 <form>
                     <div class="row mb-3">
@@ -124,7 +124,7 @@
                 </form>
             </div>
             <div class="col-md-4">
-                <!-- Aquí iría el resumen de compra -->
+                <!--resumen de compra-->
                 <h2>Resumen de compra</h2>
                 <table class="table table-bordered">
                     <thead>
