Tipeo y arreglo de botones

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="receta2.html">
                         <button type="button" class="btn btn-secondary mx-4">Receta Gratis</button>
                     </a>
-                    <a href="/compra.html?libro=1" class="btn btn-secondary mx-4">Comprar</a>
+                    <a href="compra.html?libro=1" class="btn btn-secondary mx-4">Comprar</a>
                 </div>
             </div>
             <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
@@ -106,7 +106,7 @@
                     <a href="receta.html">
                         <button type="button" class="btn btn-secondary mx-4">Receta Gratis</button>
                     </a>
-                    <a href="/compra.html?libro=2" class="btn btn-secondary mx-4">Comprar</a>
+                    <a href="compra.html?libro=2" class="btn btn-secondary mx-4">Comprar</a>
                 </div>
             </div>
         </div>
